--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -153,11 +153,11 @@ This work leverages a domain decomposition; although, not for the purpose of con
     \centering
     \caption{Classification of references by numerical method and parallelization strategy.}
     \label{tbl:parallel_rbf_refs}
-    \begin{tabular}{L{0.125\textwidth}|C{0.1\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.12\textwidth}|}
+    \begin{tabular}{L{0.11\textwidth}|C{0.1\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.09\textwidth}|C{0.125\textwidth}|}
          % Use a star or cross to denote OpenMP + MPI. 
-                                    & \multicolumn{2}{C{0.2\textwidth}|}{Multi-CPU ($^\star$:MPI+OpenMP)} & \multicolumn{3}{C{0.3\textwidth}|}{Single GPU} & \multicolumn{2}{C{0.21\textwidth}|}{Multi-GPU ($^\dag$:Non-overlapped, $^\ddag$:Overlapped)} \\ \cline{2-8}
+                                    & \multicolumn{2}{C{0.2\textwidth}|}{Multi-CPU ($^\star$:MPI+OpenMP)} & \multicolumn{3}{C{0.3\textwidth}|}{Single GPU} & \multicolumn{2}{C{0.2\textwidth}|}{Multi-GPU ($^\dag$:Non-overlapped, $^\ddag$:Overlapped)} \\ \cline{2-8}
                                     & OpenMP & MPI & CUDA     & OpenCL     & Other     & CUDA     & OpenCL   \\ \hline
-             RBF-FD                 &            &         &          &            &            &          & [This Work]$^{\ddag}$, \cite{BolligFlyerErlebacher2012}$^{\dag}$  \\ \hline
+             RBF-FD                 &            &         &          &            &            &          & \cite{BolligFlyerErlebacher2012}$^{\dag}$ \mbox{[This Work]$^{\ddag}$}  \\ \hline
              RBF PDE Methods  &  \cite{Kosec2008}   & \cite{Divo2005, Divo2007, Ingber2003,Ingber2004,Yokota2010} & \cite{Schmidt2009a,Schmidt2009b,Gumerov2007a, Gumerov2007b} &    &   &   &  \\ \hline
              Non-PDE RBF Methods    &         &    \cite{Strey2003}$^{\star}$      &  \cite{Cuomo2013,Cuntz2007}  &   &  \cite{Corrigan2005,Weiler2005,Carr2003,Brandstetter2008}  &   &      \\ \hline
              Non-RBF PDE Methods    &     &   \cite{Schubert2011}$^{\star}$    &         &      &      &   \cite{Goeddeke2007,Goeddeke2008a,Goeddeke2009a, Goeddeke2008b, Thibault2009, Phillips2009, Corrigan2009, Minden2010, YokotaGPU2010}$^{\dag}$ &  \\ \hline
